k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grassato-3d
  labels:
    app.kubernetes.io/name: grassato-3d
